--- a/src/main/resources/com/draobemag/mariokart/gameboard-view.fxml
+++ b/src/main/resources/com/draobemag/mariokart/gameboard-view.fxml
@@ -14,7 +14,7 @@
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
-    <GridPane fx:id="gameBoard">
+    <GridPane fx:id="gameBoard" alignment="CENTER">
         <ImageView fx:id="player1_sprite"></ImageView>
     </GridPane>
     <Button text="Move 1" onAction="#moveSprite"/>
