--- a/src/main/resources/com/draobemag/mariokart/player-view.fxml
+++ b/src/main/resources/com/draobemag/mariokart/player-view.fxml
@@ -7,11 +7,22 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.text.Text?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.ToggleGroup?>
+
 <VBox alignment="TOP_CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
       fx:controller="com.draobemag.mariokart.Controllers.PlayerConfigController">
     <Label text="Driver Information" style="-fx-font-style: italic;"/>
     <Label fx:id="fName" text="Player Name: "/>
-    <TextField fx:id="playerName"/>
+    <TextField fx:id="playerName" maxWidth="300"/>
+    <Label fx:id="fSprite" text="Character Choice: "/>
+    <fx:define>
+        <ToggleGroup fx:id="group" />
+    </fx:define>
+    <RadioButton fx:id="1" text="Mario" toggleGroup="$group"/>
+    <RadioButton fx:id="2" text="Luigi" toggleGroup="$group"/>
+    <RadioButton fx:id="3" text="Bowser" toggleGroup="$group"/>
+    <RadioButton fx:id="4" text="Peach" toggleGroup="$group"/>
     <Button fx:id="nextOrGo" text="Next" onAction="#validateEntries"/>
     <Button fx:id="start" text="start!" onAction="#gameInit" visible="false"/>
 </VBox>
