--- a/src/main/resources/com/draobemag/mariokart/gameboard-view.fxml
+++ b/src/main/resources/com/draobemag/mariokart/gameboard-view.fxml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.Button?>
-
-
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
@@ -22,6 +18,12 @@
           <ImageView fx:id="player3_sprite"></ImageView>
           <ImageView fx:id="player4_sprite"></ImageView>
       </GridPane>
-    <Button fx:id="moveButton" text="Roll the dice!"/>
-  </HBox>
+        <VBox fx:id="labelBox">
+            <Label fx:id="p1_speedlabel"/>
+            <Label fx:id="p2_speedlabel"/>
+            <Label fx:id="p3_speedlabel"/>
+            <Label fx:id="p4_speedlabel"/>
+        </VBox>
+    <Button fx:id="moveButton" text="Roll the dice!" onAction="#movePlayer"/>
+    </HBox>
 </VBox>
