--- a/src/main/resources/com/draobemag/mariokart/gameboard-view.fxml
+++ b/src/main/resources/com/draobemag/mariokart/gameboard-view.fxml
@@ -26,4 +26,6 @@
         </VBox>
     <Button fx:id="moveButton" text="Roll the dice!" onAction="#movePlayer"/>
     </HBox>
+
+    <Label fx:id="diceRoll"/>
 </VBox>
